Fix bug 515470:  Kontact/Kmail doesn't render some plain text e-mails

setContent is limited to 2Mo (from doc) but it seems not be the case.
Or text is converted in setContent and it takes more that 2Mo

I reduce size => now it can be displayed.

BUG: 515470
(cherry picked from commit 9290e745102049bd3d9908cf94cd995765550c15)